# infinityclaw

./: .env.example  .gitignore  AGENT_SPEC.md  ARCHITECTURE.md  CLAUDE.md  CLAW_AINDY_INTEGRATION_PLAN.md  KNOWLEDGE_MODEL.md  ONBOARDING.md  OPENCLAW_NODUS_ARCHITECTURE.md  OPENCLAW_NODUS_MIGRATION_PLAN.md  PERMISSIONS_AND_SECURITY.md  PROJECT_BRIEF.md  README.md  ROADMAP.md  RUNTIME_CONTRACT.md  WORKSPACE_SPEC.md  claw.toml  nodus.toml  pyproject.toml
claw/: __init__.py  __main__.py  cli.py
claw/agents/: __init__.py  prompt.py  registry.py  streaming.py  turn.py
claw/aindy/: __init__.py  app_registration.py  client.py  (+1 more)
claw_discord/: adapter.py
claw_matrix/: __init__.py  adapter.py
claw_signal/: __init__.py  adapter.py
claw_slack/: __init__.py  adapter.py
claw_telegram/: adapter.py
claw_webchat/: __init__.py  adapter.py
docs/: API_REFERENCE.md  CHANGELOG.md  CHANNELS.md  CONFIGURATION.md  DECISIONS.md  DEPLOYMENT.md  KNOWLEDGE_MODEL.md  OPENCLAW_TO_NODUS_ANALYSIS.md  PERMISSIONS_AND_SECURITY.md  ROADMAP.md  TEST_STRATEGY.md  WORKSPACE_SPEC.md
tests/: test_aindy_phase10.py  test_aindy_phase11.py  test_aindy_phase12.py  test_aindy_phase13.py  test_aindy_phase14.py  test_aindy_phase15.py  test_aindy_phase2.py  test_aindy_phase3.py  test_aindy_phase4.py  test_aindy_phase5.py  test_aindy_phase6.py  test_aindy_phase7.py  test_aindy_phase8.py  test_aindy_phase9.py  test_phase4_milestone.py  test_phase5_milestone.py  test_phase6_milestone.py  test_weave_knowledge_sync.py  test_weave_sync.py
workflows/: boot.nd  bootstrap.nd  heartbeat.nd  session_reset.nd
(+66 files in other folders)
